--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Panda commerce</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/custom.css">
 </head>
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
             <div class="container">
                 <a class="navbar-brand" href="#"><img src="images/logo.png"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -25,14 +26,14 @@
                             <a class="nav-link active" aria-current="page" href="#">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Shoes</a>
+                            <a class="nav-link" href="#shoes">Shoes</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Bagpack
+                            <a class="nav-link" href="#bags">Bagpack
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Subscribe</a>
+                            <a class="nav-link" href="#subscribe">Subscribe</a>
                         </li>
                     </ul>
 
@@ -44,7 +45,7 @@
             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active ">
-                        <div class="row p-5 d-flex align-items-center bg-info bg-gradient ">
+                        <div class="row p-5 d-flex align-items-center info-back bg-gradient ">
                             <div class="col-lg-7">
                                 <h1>Cool Dude Headphone</h1>
                                 <p>This is the best headphone in the world for people who just want to waste time in
@@ -52,7 +53,7 @@
 
                                 </p>
                                 <h1>$420</h1>
-                                <button class="btn btn-warning">Buy Now</button>
+                                <button class="panda-btn-buy-now">Buy Now</button>
                             </div>
                             <div class="col-lg-5">
                                 <img src="images/banner-images/headphone.png" class="d-block w-100 " alt="...">
@@ -60,7 +61,7 @@
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <div class="row p-5 d-flex align-items-center bg-info bg-gradient ">
+                        <div class="row p-5 d-flex align-items-center info-back bg-gradient ">
                             <div class="col-lg-7">
                                 <h1>Mega LCD TV For Sports
                                 </h1>
@@ -68,7 +69,7 @@
                                     tv.
                                 </p>
                                 <h1>$1200</h1>
-                                <button class="btn btn-warning">Buy Now</button>
+                                <button class="panda-btn-buy-now">Buy Now</button>
                             </div>
                             <div class="col-lg-5">
                                 <img src="images/banner-images/tv.png" class="d-block w-100 " alt="...">
@@ -76,7 +77,7 @@
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <div class="row p-5 d-flex align-items-center bg-info bg-gradient ">
+                        <div class="row p-5 d-flex align-items-center info-back bg-gradient ">
                             <div class="col-lg-7">
                                 <h1>X-Box for your living room
                                 </h1>
@@ -84,7 +85,7 @@
                                     of fake sports.
                                 </p>
                                 <h1>$600</h1>
-                                <button class="btn btn-warning">Buy Now</button>
+                                <button class="panda-btn-buy-now">Buy Now</button>
                             </div>
                             <div class="col-lg-5">
                                 <img src="images/banner-images/xbox.png" class="d-block w-100 " alt="...">
@@ -106,7 +107,8 @@
         </section>
     </header>
     <main>
-        <section class="container my-5">
+        <!-- watch secton -->
+        <section class="container my-5 catagories">
             <div class="row gy-5">
                 <div class="col-lg-4 col-md-6">
                     <div
@@ -132,7 +134,9 @@
 
             </div>
         </section>
-        <section class="container">
+
+        <!-- shoes section -->
+        <section class="container" id="shoes">
             <h2>Shoes</h2>
             <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
                 <div class="col">
@@ -145,7 +149,7 @@
                                 additional content. This content is a little bit longer.</p>
                         </div>
                         <div class="m-3">
-                            <button class="btn btn-warning">Buy Now >></button>
+                            <button class="panda-btn-buy-now">Buy Now >></button>
                         </div>
                     </div>
                 </div>
@@ -159,7 +163,7 @@
                                 content.</p>
                         </div>
                         <div class="m-3">
-                            <button class="btn btn-warning">Buy Now >></button>
+                            <button class="panda-btn-buy-now">Buy Now >></button>
                         </div>
                     </div>
                 </div>
@@ -174,13 +178,14 @@
                                 height action.</p>
                         </div>
                         <div class="m-3">
-                            <button class="btn btn-warning">Buy Now >></button>
+                            <button class="panda-btn-buy-now">Buy Now >></button>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
-        <section class="container my-5">
+        <!-- Bag section  -->
+        <section class="container my-5" id="bags">
             <h2>Bags</h2>
             <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
                 <div class="col">
@@ -193,7 +198,7 @@
                                 additional content. This content is a little bit longer.</p>
                         </div>
                         <div class="m-3">
-                            <button class="btn btn-warning">Buy Now >></button>
+                            <button class="panda-btn-buy-now">Buy Now >></button>
                         </div>
                     </div>
                 </div>
@@ -207,7 +212,7 @@
                                 content.</p>
                         </div>
                         <div class="m-3">
-                            <button class="btn btn-warning">Buy Now >></button>
+                            <button class="panda-btn-buy-now">Buy Now >></button>
                         </div>
                     </div>
                 </div>
@@ -222,15 +227,31 @@
                                 height action.</p>
                         </div>
                         <div class="m-3">
-                            <button class="btn btn-warning">Buy Now >></button>
+                            <button class="panda-btn-buy-now">Buy Now >></button>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
-    </main>
-    <footer>
 
+        <!-- form section or  subcribe section  -->
+        <section style="height: 300px;"
+            class="container d-flex justify-content-center info-back align-items-center rounded-3" id="subscribe">
+            <div>
+                <h1>LET'S STAY IN TOUCH
+                </h1>
+                <p>Get updates on sales, specials and more
+                </p>
+                <input class="form-control" type="text" placeholder="Your Email">
+                <br>
+                <button class="panda-btn-buy-now">
+                    Submit
+                </button>
+            </div>
+        </section>
+    </main>
+    <footer class="mt-5 text-center">
+        <small>&copy;2020. Panda Commerce. All rights reserved. Sofia, Bulgaria.</small>
     </footer>
 
 
