--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <div class="carousel-item active ">
                         <div class="row p-5 d-flex align-items-center info-back bg-gradient ">
                             <div class="col-lg-7">
-                                <h1>Cool Dude Headphone</h1>
+                                <h1 class="pt-2">Cool Dude Headphone</h1>
                                 <p>This is the best headphone in the world for people who just want to waste time in
                                     front of funky world.
 
@@ -56,7 +56,7 @@
                                 <button class="panda-btn-buy-now">Buy Now</button>
                             </div>
                             <div class="col-lg-5">
-                                <img src="images/banner-images/headphone.png" class="d-block w-100 " alt="...">
+                                <img src="images/banner-images/headphone.png" class="d-block w-100 pt-5" alt="...">
                             </div>
                         </div>
                     </div>
@@ -72,7 +72,7 @@
                                 <button class="panda-btn-buy-now">Buy Now</button>
                             </div>
                             <div class="col-lg-5">
-                                <img src="images/banner-images/tv.png" class="d-block w-100 " alt="...">
+                                <img src="images/banner-images/tv.png" class="d-block w-100 pt-5 " alt="...">
                             </div>
                         </div>
                     </div>
@@ -88,7 +88,7 @@
                                 <button class="panda-btn-buy-now">Buy Now</button>
                             </div>
                             <div class="col-lg-5">
-                                <img src="images/banner-images/xbox.png" class="d-block w-100 " alt="...">
+                                <img src="images/banner-images/xbox.png" class="d-block w-100 pt-5 " alt="...">
                             </div>
                         </div>
                     </div>
