--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     <div class="carousel-item">
                         <div class="row p-5 d-flex align-items-center info-back bg-gradient ">
                             <div class="col-lg-7">
-                                <h1>Mega LCD TV For Sports
+                                <h1 class="pt-2">Mega LCD TV For Sports
                                 </h1>
                                 <p>This is the best tv in the world for people who just want to waste time in front of
                                     tv.
@@ -79,7 +79,7 @@
                     <div class="carousel-item">
                         <div class="row p-5 d-flex align-items-center info-back bg-gradient ">
                             <div class="col-lg-7">
-                                <h1>X-Box for your living room
+                                <h1 class="pt-2">X-Box for your living room
                                 </h1>
                                 <p>This is the best x-box in the world for people who just want to waste time in front
                                     of fake sports.
